certifs-openshift/certifications/EX288/EX288-V5-Labs/shared/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-node-k
spec:
  selector:
    app: basic-node-k
  ports:
    - port: 8080
      targetPort: 8080
