certifs-openshift/certifications/EX288/EX288-V5-Labs/shared/kustomize/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: basic-node-k
spec:
  to:
    kind: Service
    name: basic-node-k
  port:
    targetPort: 8080
